# ai-quant-stock-picker

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEX任务清单.md  Codex深度问题修复清单.md  README.md  pr_evidence.txt  pyproject.toml  修正后的任务清单.md  最终修正版任务清单.md
.codex/: project-profile.md
.streamlit/: config.toml
backend/: README.md  app.py  aqsp_bridge.py  astock.py  chat.py  conftest.py  mcp_server.py  myreports.py  newsradar.py  portfolio.py
config/: blacklist.yaml  data_sources.yaml  evolution_config.yaml  factor_config.yaml  factor_library.json  goal_switches.yaml  monitors.yaml  news_sources.yaml  strategy_sources.yaml  thresholds.yaml  trading_holidays.json  variant_grid.yaml
data/: sample_ohlcv.csv
deploy/: bt_panel_setup.md  setup.sh
docs/: BEGINNER_DASHBOARD_INTEGRATION.md  CONSTITUTION.md  DASHBOARD_GUIDE.md  FETCHER_USAGE.md  README.md  STRATEGY_HEALTH_INTEGRATION.md  TROUBLESHOOTING.md  agent-operating-boundaries.md  architecture.md  checklist_before_live.md  daily-operation.md  email-setup.md  launchd-status.md  long-term-development-goal.md  model-handoff.md  momentum-diagnosis.md  open_source_research.md  pbo-audit-2026-05-29.md  pbo-fix-path-2026-05-29.md  pr-split-plan-2026-05-29.md  secret-and-upload-policy.md  server-dashboard-deployment.md  short-term-realtime-roadmap.md  simple-server-mode.md  vibe-research-migration.md  walkforward-2026-05-27-real.md  walkforward-2026-05.md  walkforward-20d.md  walkforward-cached.md  walkforward-debug-2026-05-28-min01.md  walkforward-eastmoney.md  walkforward-failures.md  walkforward-fix2-min04.md  walkforward-regime-fixed.md  walkforward-rsi-fix-min01.md  walkforward-v2.md  walkforward-variants-manifest.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: README.md  backfill_intraday_debate.py  backfill_real_sample_days.py  bt_task.sh  check_before_live.py  check_intraday_production_contract.py  check_no_secrets.py  check_pr_evidence.sh  check_release_consistency.py  check_runtime_storage.py  check_scheduler.py  check_vibe_research.sh  cleanup_ledger.py  clear_locks.sh  coldstart_daily.sh  collect_realtime_cross_market.py  collect_research_registry.py  collect_stock_data.py  daily_pipeline.py  daily_pipeline.sh  daily_run.sh  deploy_dashboard.sh  detect_sector.py  diagnose_momentum.py  diagnose_runtime.py  feedback_debate.py  (+54 more)
(+461 files in other folders)
