[project]
name = "ai-quant-stock-picker"
version = "0.1.0"
description = "A-share quantitative stock picker for open/close screening."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "scipy>=1.10",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
data = [
    "akshare>=1.16",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
aqsp = "aqsp.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
