[project]
name = "ai-quant-stock-picker"
version = "0.1.0"
description = "Local-first A-share quant screening workbench with optional GitHub automation."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0,<4.0",
    "numpy>=1.24,<3.0",
    "requests>=2.31,<3.0",
    "scipy>=1.10,<2.0",
    "jinja2>=3.1,<4.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
data = [
    "akshare>=1.16,<2.0",
    "baostock>=0.9.1,<1.0",
    "efinance>=0.5,<1.0",
    "mootdx>=0.7,<1.0",
    "tushare>=1.4,<2.0",
]
web = [
    "streamlit>=1.36,<2.0",
]
api = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<1.0",
]
llm = [
    "openai>=1.0,<3.0",
    "anthropic>=0.30,<1.0",
]
dev = [
    "pytest>=8.0,<10.0",
    "ruff>=0.8,<1.0",
]

[project.scripts]
aqsp = "aqsp.cli:main"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# CI must not inherit a runner-level Ruff profile. Keep the baseline explicit
# until the existing style backlog is migrated in a dedicated change.
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
pythonpath = ["src", "."]
